  New Features:

  - Columns can now have custom proportions for auto-
    resize purposes. Use the new SetColumnProportion(col,
    proportion) function. wxPG_SPLITTER_AUTO_CENTER style
    must be used, and naturally it now also works when
    the grid has more than two columns.


  Changes:

  - Property selection is no longer cleared when adding
    new properties (feature request #2942477).


  Bugs Fixed:

  - wxPropertyGrid::CanClose() could crash if there was
    no property selected (bug #2951533, fix by Andrey
    Kuznetsov).

  - wxPropertyGridInterface::Enable/DisableProperty() would
    crash if called for a property which did not belong to
    any grid (bug #2925499).

  - Property editors other than text ctrl based ones did not
    respect wxPG_PROP_READONLY flag (bug #2940435).



Version 1.4.10 ( Jan-03-2010 )

  New Features:

  - wxPropertyGrid::SetUnspecifiedValueAppearance() can
    now be used to set exact appearance of an unspecified
    value. Argument is a wxPGCell, so custom text, colours
    and font can be set.


  Changes:

  - Multi-selection now uses Shift and Ctrl keys more like
    a native Windows list box (previously it used Shift for
    selecting individual items).


  Bugs Fixed:

  - Crash on startup on OS X (bug #2915549).

  - Editor focus code was usually not executed. This should
    now be fixed, and for instance, when a wxTextCtrl based
    editor gets a focus, all the contained text will be
    selected.

  - Unspecified value rendering was incorrect for various
    property editors, such as check box.

  - Setting property value to unspecified did not properly
    refresh the editor control.

  - wxPython bindings: setting control name in PropertyGrid
    or PropertyGridManager __init__() or Create() did not
    work.

  - SetColumnCount() could crash if number of columns was
    reduced.



Version 1.4.9.3 ( Dec-10-2009 )

  Bugs Fixed:

  - Fixed regression: wxPropertyGrid could crash if it was